--- a/portfolio/web/index.html
+++ b/portfolio/web/index.html
@@ -38,6 +38,19 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <!-- <style>
+    /* Ensure web page takes full height */
+    html, body {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    #flutter_container {
+      width: 100%;
+      height: 100%;
+    }
+  </style> -->
 </head>
 <body>
   <script>
