--- a/portfolio/web/index.html
+++ b/portfolio/web/index.html
@@ -38,7 +38,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
-  <!-- <style>
+  <style>
     /* Ensure web page takes full height */
     html, body {
       height: 100%;
@@ -50,7 +50,7 @@
       width: 100%;
       height: 100%;
     }
-  </style> -->
+  </style>
 </head>
 <body>
   <script>
