--- a/portfolio/web/index.html
+++ b/portfolio/web/index.html
@@ -18,7 +18,9 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Welcome to Mohamed Sadiq's portfolio, where you can discover the projects of a Flutter Developer passionate about building dynamic mobile and web solutions.">
+  <meta name="keywords" content="Flutter, Portfolio, Mohamed Sadiq, Software Development, Mobile Apps, Web Development">
+  <meta name="author" content="Mohamed Sadiq">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,7 +31,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>portfolio</title>
+  <title>Sadiq | Flutter Portfolio</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
@@ -67,6 +69,25 @@
         }
       });
     });
+  </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyD0Ph_x_K2AZtdhVMbWwm1pvuDKuQP87yE",
+      authDomain: "flutter-chat-app-2k24.firebaseapp.com",
+      projectId: "flutter-chat-app-2k24",
+      storageBucket: "flutter-chat-app-2k24.appspot.com",
+      messagingSenderId: "520215035709",
+      appId: "1:520215035709:web:18c035059394b621d68f54"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
   </script>
 </body>
 </html>
